IE7 alignment fix
SVN-Revision: 8323

--- a/projects/web/src/main/webapp/css/ie.css
+++ b/projects/web/src/main/webapp/css/ie.css
@@ -27,7 +27,7 @@ width:951px;
 	font-size: 12pt;
 	height: 51px;
 	padding-left: 10px;
-	position: absolute;
+	position: relative;
 	top: 98px;
 	vertical-align: middle;
 	z-index:1;
@@ -53,7 +53,7 @@ div.row, build-name, main {
 }
 #header {
 	width: 100%;
-	position: absolute;
+	position: relative;
 	height: 100px;
 	background-image: url(../images/blue/header_bg.jpg);
 	background-position: top;
